tests/errors/lex_hex.java
public class lex_hex {
	public static float a = 0x11;
}
